infrastructure/kubernetes/networkPolicies/kafka-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-network-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: small-store-tiers-kafka
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: product-composite-service
        - podSelector:
            matchLabels:
              app: product-service
        - podSelector:
            matchLabels:
              app: review-service
        - podSelector:
            matchLabels:
              app: recommendation-service
      ports:
        - protocol: TCP
          port: 9092
