infrastructure/kubernetes/networkPolicies/postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: small-store-tiers-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: review-service
      ports:
        - protocol: TCP
          port: 5432
